contracts: remove seasonID as input for game creation
