# openapi/swagger.json
@@ -710,10 +710,6 @@
                     "type": "string",
                     "format": "date-time"
                 },
-                "seasonId": {
-                    "type": "integer",
-                    "format": "int64"
-                },
                 "team1Player1Id": {
                     "type": "integer",
                     "format": "int64"
